updated files for project

--- a/BankApp/src/main/resources/log4j.properties
+++ b/BankApp/src/main/resources/log4j.properties
@@ -1,10 +1,10 @@
-log4j.rootLogger = TRACE, console
+log4j.rootLogger = ALL,console,logFile
 
 log4j.appender.console = org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout = org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern = %m%n
 
-log4j.appender.revFile = org.apache.log4j.RollingFileAppender
-log4j.appender.revFile.File = appLogs.log
-log4j.appender.revFile.layout = org.log4j.PatternLayout
-log4j.appender.revFile.layout.ConversionPattern = 
+log4j.appender.logFile = org.apache.log4j.FileAppender
+log4j.appender.logFile.File = appLogs.log
+log4j.appender.logFile.layout = org.apache.log4j.PatternLayout
+log4j.appender.logFile.layout.ConversionPattern = {%p} %d %m%n
